Changelog for zest.releaser
===========================

2.13 (unreleased)
-----------------

- Nothing changed yet.


2.12 (2009-11-26)
-----------------

- Fixed mercurial sdist creation.  [reinout]

- A missing history file does not result anymore in a keyerror in prerelease.
  [reinout]

- Added lots of test output normalization so that errors aren't hidden by
  the large number of ``...`` in the doctests.  [reinout]


2.11 (2009-11-25)
-----------------

- Added /tag besides /tags for subversion [gotcha]

- Fixed tests failures. [gotcha]


2.10 (2009-10-22)
-----------------

- Added support for git.  [reinout]

- Lots of internal refactoring and small fixes.  [reinout]

- Started tests.  zest.releaser went from 0 to 94% coverage.  [reinout]


2.9.3 (2009-09-22)
------------------

- Uploading to multiple package indexes should now work in python2.6
  (though ironically it now does not work for me on python2.4, but that
  has nothing to do with zest.releaser.)  Added documentation for this.
  [maurits]

- Make sure the next version suggestion for 1.0rc6 is 1.0rc7.
  [maurits]

- In subversion, first try to get the package from the setup.py before
  falling back to the svn info, just like for mercurial.  This fixes
  the problem that e.g. Products.feedfeeder was not recognized as
  being on pypi as the svn directory name was feedfeeder.
  [maurits]


2.9.2 (2009-09-17)
------------------

- Ümläüts in a changelog don't break the logger anymore when using python2.6.2
  when the umlauts turn up in the diff.  This is due to a 2.6.2 regression
  bug, see http://bugs.python.org/issue5170.  Should be fixed in 2.6.3 when it
  comes out.  [reinout]

- (Release 2.9 and 2.9.1 are unreleased because of a setuptools bug with,
  sigh, non-ascii characters which made a dirty setup.py hack necessary).
  [reinout]

2.8 (2009-08-27)
----------------

- Fixed the release command when used in a french environment.
  In French "svn info" returns 'URL :', not 'URL:'.